[gd_scene load_steps=5 format=3 uid="uid://cb5j8hw2q7v3g"]

[ext_resource type="Script" uid="uid://ya1egne2fc4m" path="res://scripts/InventorySlot.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cowqbrp0xnxk7" path="res://assets/ui/inventory_slot_1.png" id="2"]
[ext_resource type="Texture2D" uid="uid://7ykyb5tbc0f6" path="res://assets/ui/inventory_highlight_1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cjeyewre6p7dy" path="res://assets/ui/teal_glow_animation.png" id="4"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
stretch_mode = 1

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 4

[node name="HighlightOverlay" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3")
stretch_mode = 1

[node name="SelectionGlow" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4")
stretch_mode = 1
